2018-12-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-2854.c: disabled test, segmentation fault
	* configure, configure.ac: fixed help text
	* device/lib/clean.mk: also clean ez80

2018-12-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of eZ80, Rabbit, TLCS-90 16-bit load.

2018-12-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implement RFE #594.

2018-12-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a recently-introduced bug in handling of 32-bit return values for gbz80.

2018-12-18 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c,
	  sdas/asz80/tez80.asm:
	  Improve eZ80 assembler support, patch by Hynek Sladký.

2018-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in wide read via pointer.

2018-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2856.

2018-12-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure, configure.ac: changed warning into notice
	* sdas/asz80/z80mch.c: cosmetic
	* src/sdcc.vcxproj,
	* src/sdcc.vcxproj.filters: added missing SDCC.lex & SDCC.y
	* support/cpp/libcpp/files.c,
	* support/cpp/libcpp/identifiers.c,
	* support/cpp/libcpp/init.c,
	* support/cpp/libcpp/symtab.c: fixed warnings for unsigned size_t
	* support/regression/tests/bitopcse.c: only use idata for mcs51
	* support/regression/tests/gcc-torture-execute-20021120-1.c: disabled for
	  hc08 & s08, uses way too much spillocs in DSEG
	* support/regression/tests/longlong.c: split the test in 3 parts
	* support/sdbinutils/bfd/targets.c: added "ASXXXX"
	* support/sdbinutils/libiberty/simple-object-elf.c: fixed warning

2018-12-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Refactor handling of return values, steps towards RFE #594.

2018-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  support/regression/tests/bug-2710.c:
	  Fix bug #2710.
	* Makefile.in,